query parameter filter done, started dev of localCluster getter
